fixed spacing, NaN errors

--- a/site/src/app/roadmap/catalog/CustomCourseCard.scss
+++ b/site/src/app/roadmap/catalog/CustomCourseCard.scss
@@ -1,13 +1,10 @@
-.course {
+.custom-card {
   box-shadow: 0 0 2px 0 #60616680;
   background: var(--mui-palette-overlay-overlay1);
-  border: 2px solid var(--mui-palette-divider);
-  border-radius: 8px;
-  height: auto;
+  height: 73px;
   font-size: 16px;
   padding: 12px;
   position: relative;
-  margin: 0;
   color: var(--mui-palette-secondary-main);
 
   display: grid;
@@ -15,8 +12,10 @@
     'A B'
     'A C';
   grid-template-columns: min-content auto;
-  grid-template-rows: repeat(2, min-content);
+  grid-template-rows: 1fr 1fr;
   align-items: center;
+  margin-top: 8px;
+  margin-bottom: 8px;
 
   .title {
     font-size: 14px;
@@ -27,6 +26,11 @@
 
   .course-drag-handle {
     grid-area: A;
+    align-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     position: relative;
     left: -6px;
     cursor: grab;
@@ -89,7 +93,7 @@
 }
 
 @media (max-width: 600px) {
-  .course {
+  .custom-card {
     display: flex;
     flex-direction: column;
     align-items: stretch;
